# RP_YT_down

./: Dialog_Downloader.ui  Linux-Solution.md  Prompt.txt  designer.ps1  down-runtime-C2.py  link-playlist-spotify.md  list-id3-tag.py  list_mp3_for_down.txt  main.py  musilc_list.txt  pyproject.toml  qt-basic.py  rename-mp3-to-title-artist.py  spotify-download-0.1.py  spotify-download.py  spotify_download.sh  test-QLineEdit.py  test-argparse.py  ui-org-Dialog-Downloader.py  ui_Dialog_Downloader.py  update-id3-tag-by-filename-0.1.py  update-id3-tag-by-filename.py  youtube-downloader-linux.spec  youtube-downloader.md  youtube-downloader.py  youtube-downloader.spec  ytdlp-cli-to-api.py  ytdlp_audiodown.py  ytdlp_videodown.py
@eaDir/: down-runtime-C2.py@SynoEAStream
